+ Rename subsampleCounts to rarefyAssay
+ Rename perSampleDominant* functions to getDominant and addPerSampleDominant*
  functions to addDominant
+ Rename splitByRanks to agglomerateByRanks and add option as.list
+ Explain that rarefyAssay returns a new SummarizedExperiment object that
  includes the newly added subsampled assay.
+ Fix bug in mergeFeaturesByPrevalence
+ new aliases calculateDPCoA to getDPCoA, calculateNMDS to getNMDS, calculateRDA to getRDA,
calculateCCA to getCCA
+ add informative error message in rarefyAssay on assays with strictly-negative values
+ Use rbiom package in unifrac implementation
+ Updated parameter names to follow naming convention "parameter.name"
+ rename converters makeTreeSEFrom* to convertFrom* and makePhyloseqFromTreeSE to
convertToPhyloseq
+ add rowTree agglomeration and RefSeq agglomeration in agglomerateByPrevalence
+ Fix tree merging in unsplit and mergeSEs functions
+ Added addAlpha; a wrapper for calculating all alpha diversity indices
+ Added importTaxpasta
+ Changes in default taxonomy ranks; more ranks supported
+ Added Tito2024QMP dataset
+ Added convertToBIOM
+ new methods getLDA and addLDA for LDA ordination with feature loadings
computation
+ new methods getNMF and addNMF for NMF ordination with feature loadings
computation
+ If missing values, give informative error in *RDA/*CCA functions
+ transformAssay can apply transformation to altExp
+ Added CSS transformation
+ In agglomerateByVariable, splitOn and getDominant, use 'group' to specify grouping variable.

Changes in version 1.15.x
+ subsetBy*: added update.tree argument
+ agglomerateBy*: Add na.rm option for excluding NA counts
+ Added getPERMANOVA and addPERMANOVA functions to calculate PERMANOVA
+ update.tree = TRUE by default
+ Add functions for classifying taxa based on their average abundance
+ Add addPrevalence function that adds results of getPrevalence to rowData
+ Added support for dimred to getCrossAssociation
+ Add wrapper for PhILR transformation