@@ -33,6 +33,9 @@
 #'   \item \code{dis.fun}: \code{Character scalar}. Specifies the dissimilarity
 #'   function to be used.
 #'
+#'   \item \code{transf}: \code{Function}. Specifies the optional
+#'   transformation applied before calculating the dissimilarity matrix.
+#'
 #'   \item \code{tree.name}: (Unifrac)  \code{Character scalar}. Specifies the
 #'   name of the tree from \code{rowTree(x)} that is used in calculation.
 #'   Disabled when \code{tree} is specified. (Default: \code{"phylo"})
@@ -171,6 +174,15 @@
 #' res <- getDissimilarity(tse, method = "bray", assay.type = "relabundance")
 #' as.matrix(res)[1:6, 1:6]
 #'
+#' # If applying rarefaction, the input must be count matrix and transformation
+#' # method specified in function call (Note: increase niter)
+#' rclr <- function(x){
+#'     vegan::decostand(x, method="rclr")
+#' }
+#' res <- getDissimilarity(
+#'     tse, method = "euclidean", transf = rclr, niter = 2L)
+#' as.matrix(res)[1:6, 1:6]
+#'
 NULL
 
 #' @rdname getDissimilarity
@@ -238,6 +250,7 @@ setMethod(
         args <- .get_tree_args(
             x,  method = method, assay.type = assay.type,
             transposed = transposed, ...)
+        args <- c(args, list(niter = niter))
     } else{
         # For other cases, do not fetch tree data from TreeSE
         mat <- assay(x, assay.type)
@@ -301,7 +314,7 @@ setMethod(
         }
     }
     # Initialize an argument list
-    args <- c(list(mat), list(...))
+    args <- c(list(x = mat), list(...))
     # If rarefaction is specified, calculate dissimilarity with vegan::avgdist
     # function that utilizes the specified dissimilarity function. Otherwise,
     # call the specified function directly.
